310688: Add mappings for CHEDPP (#6)
* Add new mappers for CHEDPP
* Refactor means of transport to/from BCP mappers into common mappers
* Add filename and content type to accompanying document mappers